// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day should render correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-1jmbl2z-Day"
          >
            <div
              class="css-1itpjzt-Day"
            >
              4
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render disabled correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-3frvla-Day"
          >
            <div
              class="css-2edn1-Day"
            >
              4
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-1jmbl2z-Day"
          >
            <div
              class="css-1itpjzt-Day"
            >
              4
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-1jmbl2z-Day"
          >
            <div
              class="css-1itpjzt-Day"
            >
              4
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
